Add all the files
Add all the files

--- a/products.html
+++ b/products.html
@@ -25,8 +25,7 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="trainingen.html">Trainingen</a></li>
-                <li><a href="kennisbank.html">Kennis</a></li>
+                <li><a href="products.html">Products</a></li>
                 <li><a href="signup.html">Sign up</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
