--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="trainingen.html">Trainings</a></li>
-                <li><a href="knowledge.html">Knowledge</a></li>
+                <li><a href="products.html">Products</a></li>
                 <li><a href="signup.html">Sign up</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
